2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/gdkvideoio.cpp, src/main_window.cpp: Added
	"Side-By-Side" view to display remote and local video side-by-side.
	Fixes suggestion #131123.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Fixed locking issue thanks to Kilian and Daniel!

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Restored configure.in.

	* src/addressbook_window.cpp: Added back double-click on address book
	== refresh content. Make sure the statusbar is displayed when a new
	address book is added.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Fixed cancel in edit_contact_dialog_run.
	Fixes #155588.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Reverted change I shouldn't have committed.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* configure.in, lib/Makefile.am, src/common.h, src/endpoint.cpp, 
	src/endpoint.h, src/main_window.cpp: Removed the notification system.

	* src/stunclient.cpp: Moved mutexes around so that the UI stays
	reactive when detecting NAT type.

2004-10-14  Damien Sandras  <dsandras@gnome.org>

	* src/bonobo_component.cpp: Added config.h.

	* src/connection.cpp: Fixed (#150230), thanks Simon. Mute buttons
	are now reset in their initial state at the end of a call.
	
	* src/gdkvideoio.cpp: Added guards against bad frame sizes. Fixes
	problem reported by Johnny and Simon (#150317).
	
	* src/main_window.cpp: Fixed #150282 and #150230. Hold and mute
	buttons are correct when an held call fails. Added guards against
	bad zoom values.

	* src/pref_window.cpp: Permit the incoming call sound (and only that
	sound) to be played in a separate device.

	* src/sound_handling.cpp: Same as above.

	* gnomemeeting.schemas.in.in: Same as above.

2004-10-13  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Don't permit to add a contact if there